fix: Adjust spacing and alignment in profile modal

--- a/client/src/components/ProfileModal.css
+++ b/client/src/components/ProfileModal.css
@@ -62,9 +62,6 @@
   color: #333;
 }
 
-.profile-modal-body {
-  
-}
 
 .profile-modal-body p {
   margin: 5px 0;
@@ -172,6 +169,17 @@
 
 .profile-right-column p {
   display: contents; /* This makes the <p> tags not interfere with the grid layout */
+}
+
+.my-stats-section {
+  display: grid;
+  grid-template-columns: 300px auto;
+  row-gap: 5px;
+  align-items: center;
+}
+
+.my-stats-value {
+  justify-self: start;
 }
 
 .profile-label {
